--- a/.github/workflows/docker-build-and-push.yaml
+++ b/.github/workflows/docker-build-and-push.yaml
@@ -45,6 +45,8 @@ on:
         required: false
       SECRET_DEPLOY_GITHUB_USER:
         required: false
+      GITLAB_TOKEN:
+        required: false
 
 jobs:
   build-and-push-to-gcr:
@@ -115,3 +117,4 @@ jobs:
             BUILD_TAG=${{ env.IMAGE_TAG }}
             SECRET_DEPLOY_GITHUB_TOKEN=${{ secrets.SECRET_DEPLOY_GITHUB_TOKEN }}
             SECRET_DEPLOY_GITHUB_USER=${{ secrets.SECRET_DEPLOY_GITHUB_USER }}
+            GITLAB_TOKEN={{ secrets.GITLAB_TOKEN }}
